--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
                     <div class="row">
                         <div class="field" style="flex:1 1 260px;">
                             <label for="name">Name</label>
-                            <input id="name" name="name" type="text" placeholder="Your name" required />
+                            <input id="name" name="name" type="text" placeholder="Sanjana" required />
                         </div>
                         <div class="field" style="flex:1 1 260px;">
                             <label for="email">Email</label>
-                            <input id="email" name="email" type="email" placeholder="you@example.com" required />
+                            <input id="email" name="email" type="email" placeholder="devulapellisanjana@gmail.com" required />
                         </div>
                     </div>
                     <div class="field">
